changes for finish touches

--- a/public/500.html
+++ b/public/500.html
@@ -6,7 +6,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
-    .rails-default-error-page {
+    .name-change-two {
     background-color: #fcfcfc;
     color: #282378;
     text-align: center;
@@ -26,7 +26,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="name-change-two">
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1 class="number">500</h1>
